client/src/index.css
:root {
  --primary: #e5e5e5;
  --secondary: #ffffff;
  --tertiary: #14213d;
  --light: #fca311;
  --dark: #000000;
  --error: rgb(228, 46, 1);
  --spacing-one: calc(1rem * 0.25);
  --spacing-two: calc(1rem * 0.5);
  --spacing-three: 1rem;
  --spacing-four: calc(1rem * 1.5);
  --spacing-five: calc(1rem * 3);
  --border-radius: 0.3rem;
}

* {
  box-sizing: border-box;
}

html,
body {
  min-height: 100%;
}

body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
  sans-serif;
  font-weight: 400;
  line-height: 1.5;
  font-size: 20px;
  color: var(--tertiary);
  background-color: var(--secondary);
}

h1 {
  font-weight: 700;
  margin: 5px 0;
  line-height: 1.25;
}

p {
  font-size: 1.1rem;
  margin-top: 0;
}

a {
  color: var(--light);
  text-decoration: none;
  transition: all 0.2s;
}

a:hover {
  color: var(--light);
  text-decoration: none;
}


/* a:visited {
  color: inherit;
} */

nav {
  /* width: 100%; */
  justify-content: center;
}

nav a {
  padding: 6px 10px;
  margin: 0 15px;
  transition: all 0.2s;
}

nav a:hover {
  color: var(--light);
  background-color: grey;
}

/* .btn,
.pill {
  font-size: 1.3rem;
  text-decoration: none;
  padding: 0.5rem 1.2rem;
  margin: 5px 0;
  border-radius: var(--border-radius);
  border: none;
  color: var(--secondary);
  outline: none;
  background-color: var(--tertiary);
  transition: all 0.5s;
} */

/* .btn:hover,
.pill:hover {
  color: var(--tertiary);
  background-color: var(--light);
} */


/* .btn-grad {background-image: linear-gradient(to right, #F3904F 0%, #3B4371  51%, #F3904F  100%)} */
.btn-grad {background-image: linear-gradient(to right, var(--tertiary) 0%, var(--light)  51%, var(--tertiary)  100%)}
.btn-grad {
   margin: 10px;
   padding: 15px 45px;
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
   background-size: 200% auto;
   color: white;            
   box-shadow: 0 0 20px #eee;
   border-radius: 10px;
   display: block;
 }

 .btn-grad:hover {
   background-position: right center; /* change the direction of the change here */
   color: #fff;
   text-decoration: none;
 }


.btn-inline {
  display: inline;
}

/* CARDS for signup/login forms */
.card {
  margin: 0 0 10px 0;
  /* border: 1px solid var(--dark); */
  border-radius: var(--border-radius);
  background-color: var(--primary);
  color: var(--dark);
  border : none
}

.card-header {
  color: var(--secondary);
  margin: 0;
  background-color: var(--tertiary);
  padding: 0.625rem;
  border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
}

.card-body {
  padding: 2.5%;
  font-size: 1.4rem;
}


/* FORM */
.form-label,
.form-input,
.form-textarea {
  display: block;
}


.form-label {
  font-size: 1.2rem;
  margin: 0.625rem 0 0.25rem;
}

.form-input {
  width: 100%;
  padding: 0.75rem;
  margin: 0.2rem 0;
  font-size: 1.2rem;
  /* border: 2px solid var(--dark); */
  /* border-radius: var(--border-radius); */
}

/* LAYOUT */
.container {
  /* width: 85%; */
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
}

.container-fluid {
  width: 92%;
}

/* flex */

.flex-column {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
}

.flex-row {
  display: flex;
  /* flex-wrap: wrap; */
}

.justify-center {
  justify-content: center;
}

.justify-flex-start {
  justify-content: flex-start;
}

.justify-space-between-lg {
  justify-content: space-between;
}

.align-center {
  align-items: center;
}

.col-12 {
  flex: 0 0 100%;
}

.col-md-6 {
  flex: 0 0 calc(100% * 6 / 12 - 0.5%);
}

/* HEIGHT / WIDTH UTILS */
.min-100-vh {
  min-height: 100vh;
}

.w-100 {
  width: 100%;
}

.w-90 {
  width: 90;
}

.w-95 {
  width: 95%;
}

.w-content {
  width: fit-content;
}

/* margin */
.mt-auto {
  margin-top: auto;
}

.mb-4 {
  margin-bottom: var(--spacing-four);
}

.bg-color {
  background-color: var(--tertiary);
  color: var(--secondary);
}

/* .bg-header {
  background-color: var(--tertiary);
  color: var(--light);
} */

/* padding */
.p-4 {
  padding: var(--spacing-four);
}

.py-2 {
  padding-top: var(--spacing-two);
  padding-bottom: var(--spacing-two);
}

.p-2 {
  padding: var(--spacing-two);
}

.p-1 {
  padding: var(--spacing-one);
}

.text-center {
  text-align: center;
}


/* homepage css */
.card-homepage, .card-feature {
  /* background-image: linear-gradient(160deg, #fff1eb 0%, #fff1eb 51%, #f3cc8c 100%, var(--light) 100%) ; */
  background: linear-gradient(to bottom, rgba(92,108,143,0.3637021272078804) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(92,108,143,0.3637021272078804) 100%);
  box-shadow: 5px 5px 5px lightgray; 
  color: var(--tertiary);
}

.image {
    position: relative;
    width: 500px;
    height: 300px;
}

.span-text {
  font-size: 18px;
  /* background-color: var(--primary); */
  margin-bottom: 3px;
  /* border: 1px solid var(--primary); */
  border-radius: 2px;
  padding: 2px;
  color: var(--tertiary);
}

.text-color {
  color : var(--light);
}

.text-color-2 {
  color: var(--tertiary);
}

.text-bold {
  font-weight: bold;
}

.art-title-text {
  color: var(--tertiary);
  padding: 5px;
  font-weight: bold;
}

.h-margin {
  margin: 5px;
}

.image-gallery {
  position: relative;
    /* width: 500px; */
    height: 400px;

}

/* Form Profile Page */
.label-input-container {
  display: flex;
  flex-direction: column;
  margin-bottom: 5px;
}

input[type=file]{
  margin: 5px 0 5px 0;
}

.display-img {
  margin: 5px 0 5px 0;
  width : 250px;
  height: 300px;
}

/* -------------------------media queries------------------------------------- */

